--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/estilos.css">
+    <script src="./js/bienvenida.js"></script>
 </head>
 <body>
     <h1>hola mundo</h1>
     <p>johan villegas</p>
     <p>adsi</p>
     <p>2450159</p>
-    
 </body>
+<input type="button" onclick="alerta()" value="alerta">
 </html>
