--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>johan villegas</p>
     <p>adsi</p>
     <p>2450159</p>
+    <p>Gigante Huila</p>
+    <p>Ricardo Trujillo</p>
 </body>
 <input type="button" onclick="alerta()" value="alerta">
 </html>
