--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>2450159</p>
     <p>Gigante Huila</p>
     <p>Ricardo Trujillo</p>
+    <img src="./img/uno.jpg" alt="">
 </body>
 <input type="button" onclick="alerta()" value="alerta">
 </html>
