--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p>Gigante Huila</p>
     <p>Ricardo Trujillo</p>
     <img src="./img/uno.jpg" alt="">
+    <video src="./videos/Goku Black.mp4"></video>
 </body>
 <input type="button" onclick="alerta()" value="alerta">
 </html>
